// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event component should render FAVORITE_LIST event correctly 1`] = `
<FavoriteEvent
  event={
    Object {
      "eventId": 1,
      "eventType": "FAVORITE_LIST",
      "user": Object {},
    }
  }
  eventStoreType="eventStoreType"
/>
`;

exports[`Event component should render ONBOARDING event correctly 1`] = `
<OnboardingEvent
  event={
    Object {
      "eventId": 1,
      "eventType": "ONBOARDING",
      "user": Object {},
    }
  }
/>
`;

exports[`Event component should render ORDER event correctly 1`] = `
<OrderEvent
  event={
    Object {
      "eventId": 1,
      "eventType": "ORDER",
      "user": Object {},
    }
  }
  eventStoreType="eventStoreType"
/>
`;

exports[`Event component should render POST event correctly 1`] = `
<PostEvent
  event={
    Object {
      "eventId": 1,
      "eventType": "POST",
      "projectName": "ProjectName",
      "user": Object {},
    }
  }
  eventStoreType="eventStoreType"
  isGlobalFeed={false}
/>
`;

exports[`Event component should render TEAM_EXPERT event correctly 1`] = `
<TeamExpertEvent
  event={
    Object {
      "eventId": 1,
      "eventType": "TEAM_EXPERT",
      "user": Object {},
    }
  }
  eventStoreType="eventStoreType"
/>
`;

exports[`Event component should render TEAM_MEMBER event correctly 1`] = `
<TeamMemberEvent
  event={
    Object {
      "eventId": 1,
      "eventType": "TEAM_MEMBER",
      "user": Object {},
    }
  }
  eventStoreType="eventStoreType"
/>
`;

exports[`Event component should render TRACKING event correctly 1`] = `
<TrackingEvent
  event={
    Object {
      "eventId": 1,
      "eventType": "TRACKING",
      "user": Object {},
    }
  }
  eventStoreType="eventStoreType"
/>
`;

exports[`Event component should render correctly 1`] = `null`;
